# Comfyui-aiai

./: .gitignore  AiHelper.py  Comfly.py  README.md  __init__.py  pyproject.toml  requirements.txt
web/js/: Comfly_mjstyle.js
workflow/: AIAI Doubao SeedEdit (1).json  AIAI-GeminiAPI.json  AIAI-Nano-Banana-2-Edit-Multi-I2I-4K.json  AIAI-Nano-Banana-2-Edit-S2A.json  AIAI-Nano-Banana-2-Edit-T2I-4K.json  AIAI-Nano-Banana-Edit-Proportion-multi-image.json  AIAI-Nano-Banana-Edit-Proportion-single-image.json  AIAI-doubao-seedream4_5_image_edit.json  AIAI-gemini-3.1-flash-image-preview_edit_s2a.json  AIAI-gemini-3.1-flash-image-preview_multi_pics_edit_s2a.json  AIAI-gemini-3.1-flash-image-preview_t2i_s2a.json  AIAI-gemmi-editimage.json  AIAI-gpt-image-2-官方版多图编辑支持4K-FIX.json  AIAI-gpt-image-2图像编辑（非100%）.json  AIAI-gpt-image-2官方全比例4K版（支持多参）V2.json  AIAI-gpt-image-2文生图(非100%).json  AIAI-gpt-image-2文生图ok.json  AIAI-gpt4o-api.json  AIAI-grok3-video-i2v-v2.json  AIAI-grok3-video-multi-imgs-r2v-15s-v2.json  AIAI-grok3-video-r2v-15s-v4.json  AIAI-grok3-video-t2v-15s-v3.json  AIAI-grok3-video-t2v-v2.json  AIAI-kling-V1.0-text2video.json  AIAI-kling-image2video.json  AIAI-kling-text2video.json  AIAI-nano-banana-1.json  AIAI-nano-banana-2.json  AIAI-nano-banana-V2(Gemini-3-pro-image-preview).json  AIAI-qwen-image-max.json  AIAI-seeddream-v4-image-edit-1.json  AIAI-seeddream-v4-image-edit-2.json  AIAI-seeddream3-i2v.json  AIAI-seeddream3-t2v.json  AIAI-suno-v5-1.json  AIAI-suno-v5-2.json  AIAI-suno-v5-Lyrics-Load.json  AIAI-suno-v5-Song-Cover.json  AIAI-suno-v5-Song-Extend.json  AIAI-suno-v5.5-excellent.json  (+25 more)
