[project]
name = "comfyui-aiai"
description = "AIAI custom nodes and workflows for ComfyUI."
version = "1.5.4"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["aiohttp", "numpy", "Pillow", "requests", "openai", "opencv-python"]

[project.urls]
Repository = "https://github.com/aiaiai666/Comfyui-aiai"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/aiaiai666/Comfyui-aiai/wiki"
"Bug Tracker" = "https://github.com/aiaiai666/Comfyui-aiai/issues"

[tool]
[tool.comfy]
PublisherId = "aiaiai666"
DisplayName = "Comfyui-aiai"
Icon = "https://avatars.githubusercontent.com/u/96167788"
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility
